Saving last good version of Jim's installation script

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Emacs Editing
+*.*~
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -43,15 +45,6 @@ nosetests.xml
 coverage.xml
 *,cover
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-
-# Sphinx documentation
-docs/_build/
 
 # PyBuilder
 target/
